--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -62,6 +62,16 @@ i {
     }
 }
 
+.paragraph-text {
+    text-align: center;
+}
+
+@media(max-width: 767px) {
+    .paragraph-text {
+       text-align: justify;
+    }
+}
+
 a {
     color: #42dca3;
     -webkit-transition: all .2s ease-in-out;
@@ -483,6 +493,7 @@ a:focus {
 
 ul.banner-social-buttons {
     margin-top: 0;
+    line-height: 60px;
 }
 
 @media(max-width:1199px) {
@@ -493,7 +504,6 @@ ul.banner-social-buttons {
 
 @media(max-width:767px) {
     ul.banner-social-buttons li {
-        display: block;
         margin-bottom: 20px;
         padding: 0;
     }
